--- a/module/Sanpham/view/sanpham/sanpham/giohang.phtml
+++ b/module/Sanpham/view/sanpham/sanpham/giohang.phtml
@@ -1,89 +1,115 @@
-<?php echo $this->headtitle("OK DEAL | Giỏ hàng")?>
-<div class="top-title-area">
-        <div class="container">
-            <h1 class="title-page">Giỏ hàng</h1>
-        </div>
-    </div>
-	
-
-<div class="gap"></div>
-
-<!-- //////////////////////////////////
-//////////////END MAIN HEADER////////// 
-////////////////////////////////////-->
 
 
-<!-- //////////////////////////////////
-//////////////PAGE CONTENT///////////// 
-////////////////////////////////////-->
-
-
-<div class="container">
 <?php
 if (isset ( $ds_sp )) {
-	?>
-<form name="cart_quantity"
-		action="<?php echo $this->url('sanpham',array('action'=>'giohang'));?>"
-		method="post">
-		<table class="shopping_cart_detail_big" border="0" cellspacing="0"
-			cellpadding="0">
-			<tbody>
-				<tr class="th">
-					<th width="5%">&nbsp;</th>
-					<th width="40%" align="left">Sản phẩm</th>
-					<th width="14%" align="center">Đơn giá</th>
-					<th width="15%" align="center">Số lượng</th>
-					<th width="16%" align="center">Thành tiền</th>
-					<th width="6%" align="center">Xóa</th>
-				</tr>
-					<?php foreach($ds_sp as $row) : ?>
-					<?php
-					echo '<input type="hidden" name="id' . $row->id . '" value="' . $row->id . '"/>
-					<input type="hidden" name="price' . $row->id . '" value="' . $row->sales . '"/>';
-					?>
-					<tr>
-					<td><a href=""> <img
-							src="<?php echo $this->basepath()?>/img/hinh_san_pham/<?php echo $row->image ?>"
-							alt="<?php echo $row->product_name?>" width="310" height="310">
-					</a></td>
-					<td align="left" valign="top"><a href=""><?php echo $row->product_name?></a>
-					</td>
-					<td align="center"><strong><?php echo number_format ( $row->sales )?> đ</strong></td>
-					<td align="center" valign="middle"><input type="text"
-						name="<?php echo 'qty' . $row->id ?>"
-						value="<?php echo $row->qty?>" size="2" style="width: 40px; margin:0"></td>
-					<td align="right" style="padding-right: 40px;"><strong><span
-							class="sum_sum2"><?php echo number_format ( $row->sales * $row->qty )?> đ</span></strong></td>
-					<td align="center" class="s_cart_td" valign="middle"><input
-					type="checkbox" name="xoa<?php echo $row->id?>"
-					value="<?php echo $row->id?>"></td>
-				</tr>
-				<?php endforeach;?>
-			<tr class="no_hover">
-					<td colspan="6" align="right"
-						style="border-right: 1px solid #DFDFDF">
-						<div class="form_sum_big1"></div>
-
-						<div class="form_sum_big">
-
-							<div class="row1">
-								<span class="row_L">Tổng cộng:</span><span class="row_R sum"><?php echo number_format ($tong_tien)?> đ</span><br
-									class="clean">
-							</div>
-						</div>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-		<div class="btn_form">
-			<input type="submit" class="btn_tieptucmuahang L" value=" Cập nhập ">
-			<input type="button" class="btn_thanhtoan L" value=" Thanh toán " onclick="window.location='<?php echo $this->url('customers', array('action'=>'add'))?>'">
-		</div>
-	</form>
-	<?php } ?>
-</div>
-
-
-<!-- //////////////////////////////////
-//////////////END PAGE CONTENT///////// 
-////////////////////////////////////-->
+?>
+<section class="span12">
+                
+                <div class="checkout-container">
+                    <div class="row">
+                    	<div class="span10 offset1">
+                    	    
+                    	    <!--  ==========  -->
+							<!--  = Header =  -->
+							<!--  ==========  -->
+                    		<header>
+                    		    <div class="row">
+                    		    	<div class="span2">
+                    		    		<a href="index-2.html"><img src="images/logo-bw.png.pagespeed.ce.KeNq9wU_LZ.png" alt="Webmarket Logo" width="48" height="48"/></a>
+                    		    	</div>
+                    		    	<div class="span6">
+                    		    	    <div class="center-align">
+                    		    	        <h1><span class="light">Review</span> Shopping Cart</h1>
+                    		    	    </div>
+                    		    	</div>
+                    		    	<div class="span2">
+                    		    	    <div class="right-align">
+                    		    	    	<img src="images/buttons/92x65xsecurity.jpg.pagespeed.ic.0kRRD5XXok.jpg" alt="Security Sign" width="92" height="65"/>
+                    		    	    </div>
+                    		    	</div>
+                    		    </div>
+                    		</header>
+                    		
+                    		<!--  ==========  -->
+							<!--  = Steps =  -->
+							<!--  ==========  -->
+                    		<div class="checkout-steps">
+                    		    <div class="clearfix">
+                    		    	<div class="step active">
+                    		    	    <div class="step-badge">1</div>
+                    		    	    Shopping Cart
+                    		    	</div>
+                    		    	<div class="step">
+                    		    	    <div class="step-badge">3</div>
+                    		    	    Shipping Address
+                    		    	</div>
+                    		    	<div class="step">
+                                        <div class="step-badge">2</div>
+                                        Payment Method
+                                    </div>
+                    		    	<div class="step">
+                    		    	    <div class="step-badge">4</div>
+                    		    	    Confirm &amp; Pay
+                    		    	</div>
+                    		    </div>
+                    		</div> <!-- /steps -->
+                    		
+                    		<!--  ==========  -->
+							<!--  = Selected Items =  -->
+							<!--  ==========  -->
+							<table class="table table-items">
+							    <thead>
+							    	<tr>
+							    		<th colspan="2">Item</th>
+							    		<th><div class="align-center">Quantity</div></th>
+							    		<th><div class="align-right">Price</div></th>
+							    	</tr>
+							    </thead>
+							    <tbody>
+							         <?php foreach($ds_sp as $row) : ?>
+										<?php
+										echo '<input type="hidden" name="id' . $row->id . '" value="' . $row->id . '"/>
+										<input type="hidden" name="price' . $row->id . '" value="' . $row->sales . '"/>';
+										?>
+							        <tr>
+							        	<td class="image"><img src="<?php echo $row->image ?>" alt="" width="124" height="124"/></td>
+							        	<td class="desc"><?php echo $row->proname ?> <a title="Remove Item" class="icon-remove-sign" href="#"></a></td>
+							        	<td class="qty">
+							        	    <input type="text" class="tiny-size" value="2"/>
+					            	    </td>
+							        	<td class="price">
+							        	    $<?php echo $row->price ?>
+							        	</td>
+							        </tr>
+							         <?php endforeach ?>
+							        
+							        							        <tr>
+							        	<td colspan="2" rowspan="2">
+							        	    <div class="alert alert-info">
+                                                <button data-dismiss="alert" class="close" type="button">×</button>
+                                                Shipping costs are calculated based on location. <a href="#">More information</a>
+                                            </div>
+							        	</td>
+							        	<td class="stronger">Shipping:</td>
+							        	<td class="stronger"><div class="align-right">$0</div></td>
+							        </tr>
+							        <tr>
+							        	<td class="stronger">Subtotal:</td>
+							        	<td class="stronger"><div class="size-16 align-right">$<?php echo number_format ($tong_tien)?></div></td>
+							        </tr>
+							    </tbody>
+							</table>
+							
+							<hr/>
+							
+							<p class="right-align">
+							    In the next step you will choose your shipping address &nbsp; &nbsp;
+							    <a href="checkout-step-2.html" class="btn btn-primary higher bold">CONTINUE</a>
+							</p>
+                    	</div>
+                    </div>
+                </div>
+                
+                
+            </section> <!-- /main content -->
+ <?php } ?>
