--- a/module/Sanpham/view/sanpham/sanpham/giohang.phtml
+++ b/module/Sanpham/view/sanpham/sanpham/giohang.phtml
@@ -1,4 +1,5 @@
-
+<div class="container">
+        <div class="row">
 
 <?php
 if (isset ( $ds_sp )) {
@@ -113,3 +114,5 @@ if (isset ( $ds_sp )) {
                 
             </section> <!-- /main content -->
  <?php } ?>
+ </div>
+ </div>
