--- a/module/Sanpham/view/sanpham/sanpham/giohang.phtml
+++ b/module/Sanpham/view/sanpham/sanpham/giohang.phtml
@@ -76,7 +76,7 @@ if (isset ( $ds_sp )) {
 							         <?php foreach($ds_sp as $row) : ?>
 										<?php
 										echo '<input type="hidden" name="id' . $row->id . '" value="' . $row->id . '"/>
-										<input type="hidden" name="price' . $row->id . '" value="' . $row->sales . '"/>';
+										<input type="hidden" name="price' . $row->id . '" value="' . $row->price . '"/>';
 										?>
 							        <tr>
 							        	<td class="image"><img src="<?php echo $row->image ?>" alt="" width="124" height="124"/></td>
