--- a/module/Application/view/layout/header.phtml
+++ b/module/Application/view/layout/header.phtml
@@ -84,7 +84,7 @@
                     <div class="span8">
                         <div class="topmost-line">
                             <div class="higher-line">
-                                <a href="" class="gray-link">Home</a>
+                                <a href="/" class="gray-link">Home</a>
                             </div>&nbsp;
                             <div class="higher-line">
                                 <a href="" class="gray-link">News</a>
@@ -111,7 +111,7 @@
                 <!--  = Logo =  -->
                 <!--  ==========  -->
                 <div class="span7">
-                    <a class="brand" href="index-2.html">
+                    <a class="brand" href="/">
                         <img src="<?php echo $this->basepath()?>/template/main/images/logo.png.pagespeed.ce.zVDKa4LAZz.png" alt="Webmarket Logo" width="48" height="48"/>
                         <span class="pacifico">Vnref Online</span>
                         <span class="tagline">Really Cool e-Commerce</span>
