--- a/module/Customers/view/customers/customers/add.phtml
+++ b/module/Customers/view/customers/customers/add.phtml
@@ -27,7 +27,7 @@
                     		<header>
                     		    <div class="row">
                     		    	<div class="span2">
-                    		    		<a href="index-2.html"><img src="images/logo-bw.png.pagespeed.ce.KeNq9wU_LZ.png" alt="Webmarket Logo" width="48" height="48"/></a>
+                    		    		<a href="index-2.html"><img src="<?php echo $this->basepath() ?>/template/main/images/logo-bw.png.pagespeed.ce.KeNq9wU_LZ.png" alt="Webmarket Logo" width="48" height="48"/></a>
                     		    	</div>
                     		    	<div class="span6">
                     		    	    <div class="center-align">
@@ -36,7 +36,7 @@
                     		    	</div>
                     		    	<div class="span2">
                     		    	    <div class="right-align">
-                    		    	    	<img src="images/buttons/92x65xsecurity.jpg.pagespeed.ic.0kRRD5XXok.jpg" alt="Security Sign" width="92" height="65"/>
+                    		    	    	<img src="<?php echo $this->basepath() ?>/template/main/images/buttons/92x65xsecurity.jpg.pagespeed.ic.0kRRD5XXok.jpg" alt="Security Sign" width="92" height="65"/>
                     		    	    </div>
                     		    	</div>
                     		    </div>
@@ -49,19 +49,11 @@
                     		    <div class="clearfix">
                     		    	<div class="step done">
                     		    	    <div class="step-badge"><i class="icon-ok"></i></div>
-                    		    	    <a href="checkout-step-1.html">Shopping Cart</a>
+                    		    	    <a href="">Shopping Cart</a>
                     		    	</div>
                     		    	<div class="step active">
                     		    	    <div class="step-badge">2</div>
                     		    	    Shipping Address
-                    		    	</div>
-                    		    	<div class="step">
-                                        <div class="step-badge">2</div>
-                                        Payment Method
-                                    </div>
-                    		    	<div class="step">
-                    		    	    <div class="step-badge">4</div>
-                    		    	    Confirm &amp; Pay
                     		    	</div>
                     		    </div>
                     		</div> <!-- /steps -->
@@ -120,7 +112,7 @@
 						        In the next step you will choose a payment method &nbsp; &nbsp;
 						        
 						        <input id="submitOrder" type="submit" class="btn btn-primary higher bold"
-							value=" CONTINUE ">
+							value=" Confirm &amp; Pay ">
 						    </p>
 							    
 							    
