--- a/module/Customers/view/customers/customers/add.phtml
+++ b/module/Customers/view/customers/customers/add.phtml
@@ -112,7 +112,7 @@
 						        In the next step you will choose a payment method &nbsp; &nbsp;
 						        
 						        <input id="submitOrder" type="submit" class="btn btn-primary higher bold"
-							value=" Confirm &amp; Pay ">
+							value=" CONTINUE PAY">
 						    </p>
 							    
 							    
