--- a/module/Application/view/layout/header.phtml
+++ b/module/Application/view/layout/header.phtml
@@ -178,6 +178,8 @@
             <!--  ==========  -->
             <!--  = Cart =  -->
             <!--  ==========  -->
+            <?php $cart = $this->giohang() ?>
+            <?php print_r($cart) ?>
             <div class="span3">
                 <div class="cart-container" id="cartContainer">
                     <div class="cart">
