--- a/module/Sanpham/view/sanpham/sanpham/cate.phtml
+++ b/module/Sanpham/view/sanpham/sanpham/cate.phtml
@@ -7,17 +7,12 @@
             <div class="span12">
                 <ul class="breadcrumb">
                     <li>
-                        <a href="index-2.html">Webmarket</a>
+                        <a href="/">Home</a>
                     </li>
                     <li><span class="icon-chevron-right"></span>
                     </li>
                     <li>
-                        <a href="shop.html">Shop</a>
-                    </li>
-                    <li><span class="icon-chevron-right"></span>
-                    </li>
-                    <li>
-                        <a href="shop.html">Grid View</a>
+                        <a href="">Shop</a>
                     </li>
                 </ul>
             </div>
