--- a/module/Application/view/layout/header.phtml
+++ b/module/Application/view/layout/header.phtml
@@ -96,7 +96,7 @@
                                 <a href="<?php echo $this->url('lienhe') ?>" class="gray-link">Contact</a>
                             </div>&nbsp;
                             <div class="higher-line">
-                                <a href="" class="gray-link">Cart</a>
+                                <a href="<?php echo $this->url('sanpham',array('action'=>'giohang'))?>" class="gray-link">Cart</a>
                             </div>
                             &nbsp;
                         </div>
@@ -179,82 +179,37 @@
             <!--  = Cart =  -->
             <!--  ==========  -->
             <?php $cart = $this->giohang() ?>
-            <?php print_r($cart) ?>
             <div class="span3">
                 <div class="cart-container" id="cartContainer">
                     <div class="cart">
-                        <p class="items">CART <span class="dark-clr">(3)</span></p>
-                        <p class="dark-clr hidden-tablet">1816.90đ</p>
-                        <a href="checkout-step-1.html" class="btn btn-danger">
+                        <p class="items">CART <span class="dark-clr">(<?php echo count($cart) ?>)</span></p>
+                        <p class="dark-clr hidden-tablet">$<?php echo $_SESSION['tong_tien'] ?></p>
+                        <a href="<?php echo $this->url('sanpham',array('action'=>'giohang'))?>" class="btn btn-danger">
                             <!-- <span class="icon icons-cart"></span> -->
                             <i class="icon-shopping-cart"></i>
                         </a>
                     </div>
                     <div class="open-panel">
-                                                <div class="item-in-cart clearfix">
+                    <?php foreach($cart as $carts): ?>
+                          <div class="item-in-cart clearfix">
                             <div class="image">
-                                <img src="<?php echo $this->basepath()?>/template/main/images/dummy/cart-items/124x124xcart-item-1.jpg.pagespeed.ic.MOH6pViKb3.jpg" width="124" height="124" alt="cart item"/>
+                                <img src="<?php echo $carts['image'] ?>" width="124" height="124" alt="<?php echo $carts['proname'] ?>"/>
                             </div>
                             <div class="desc">
-                                <strong><a href="product.html">Sit Consectetur Vel Nisi Eros Amet</a></strong>
+                                <strong><a href=""><?php echo $carts['proname'] ?></a></strong>
                                 <span class="light-clr qty">
-                                    Qty: 1
+                                    Qty: <?php echo $carts['qty'] ?>
                                     &nbsp;
-                                    <a href="#" class="icon-remove-sign" title="Remove Item"></a>
                                 </span>
                             </div>
                             <div class="price">
-                                <strong>$3264</strong>
+                                <strong>$<?php echo $carts['price'] ?></strong>
                             </div>
                         </div>
-                                                <div class="item-in-cart clearfix">
-                            <div class="image">
-                                <img src="<?php echo $this->basepath()?>/template/main/images/dummy/cart-items/124x124xcart-item-2.jpg.pagespeed.ic.pWDTtNZ7M8.jpg" width="124" height="124" alt="cart item"/>
-                            </div>
-                            <div class="desc">
-                                <strong><a href="product.html">Ipsum Consectetur Adipiscing Ac Metus</a></strong>
-                                <span class="light-clr qty">
-                                    Qty: 1
-                                    &nbsp;
-                                    <a href="#" class="icon-remove-sign" title="Remove Item"></a>
-                                </span>
-                            </div>
-                            <div class="price">
-                                <strong>$5922</strong>
-                            </div>
-                        </div>
-                                                <div class="item-in-cart clearfix">
-                            <div class="image">
-                                <img src="<?php echo $this->basepath()?>/template/main/images/dummy/cart-items/124x124xcart-item-3.jpg.pagespeed.ic.SxHNASdP7z.jpg" width="124" height="124" alt="cart item"/>
-                            </div>
-                            <div class="desc">
-                                <strong><a href="product.html">Vivamus Tincidunt Est Condimentum</a></strong>
-                                <span class="light-clr qty">
-                                    Qty: 1
-                                    &nbsp;
-                                    <a href="#" class="icon-remove-sign" title="Remove Item"></a>
-                                </span>
-                            </div>
-                            <div class="price">
-                                <strong>$3865</strong>
-                            </div>
-                        </div>
-                                                <div class="summary">
-                            <div class="line">
-                                <div class="row-fluid">
-                                    <div class="span6">Shipping:</div>
-                                    <div class="span6 align-right">$4.99</div>
-                                </div>
-                            </div>
-                            <div class="line">
-                                <div class="row-fluid">
-                                    <div class="span6">Subtotal:</div>
-                                    <div class="span6 align-right size-16">$357.81</div>
-                                </div>
-                            </div>
-                        </div>
+                    <?php endforeach ?>
+                      
                         <div class="proceed">
-                            <a href="checkout-step-1.html" class="btn btn-danger pull-right bold higher">CHECKOUT <i class="icon-shopping-cart"></i></a>
+                            <a href="<?php echo $this->url('customers', array('action'=>'add'))?>" class="btn btn-danger pull-right bold higher">CHECKOUT <i class="icon-shopping-cart"></i></a>
                             <small>Shipping costs are calculated based on location. <a href="#">More information</a></small>
                         </div>
                     </div>
