--- a/module/Lienhe/view/lienhe/lienhe/index.phtml
+++ b/module/Lienhe/view/lienhe/lienhe/index.phtml
@@ -7,11 +7,11 @@
                 <div class="span12">
                     <ul class="breadcrumb">
                         <li>
-                            <a href="index-2.html">Webmarket</a>
+                            <a href="/">Home</a>
                         </li>
                         <li><span class="icon-chevron-right"></span></li>
                         <li>
-                            <a href="contact.html">Contact Us</a>
+                            <a href="">Contact Us</a>
                         </li>
                     </ul>
                 </div>
@@ -94,9 +94,7 @@
                         		<p>
                         		    <strong class="opensans dark-clr">IMAGINARY COMPANY LTD.</strong>
                         		    <br/>
-                        		    Wall street 17,
-                        		    <br/>
-                        		    1000 New York,
+                        		    200 1/2 university Ave Lowell, MA 01854
                         		    <br/>
                         		    United States
                         		</p>
