--- a/module/Sanpham/view/sanpham/sanpham/search.phtml
+++ b/module/Sanpham/view/sanpham/sanpham/search.phtml
@@ -12,7 +12,7 @@
                     <li><span class="icon-chevron-right"></span>
                     </li>
                     <li>
-                        <a href="">Shop</a>
+                        <a href="">Search</a>
                     </li>
                 </ul>
             </div>
