--- a/module/Tintuc/view/tintuc/tintuc/detail.phtml
+++ b/module/Tintuc/view/tintuc/tintuc/detail.phtml
@@ -9,15 +9,11 @@
                 <div class="span12">
                     <ul class="breadcrumb">
                         <li>
-                            <a href="">Webmarket</a>
+                            <a href="/">Home</a>
                         </li>
                         <li><span class="icon-chevron-right"></span></li>
                         <li>
-                            <a href="shop.html">Blog</a>
-                        </li>
-                        <li><span class="icon-chevron-right"></span></li>
-                        <li>
-                            <a href="blog-single.html">Single Post</a>
+                            <a href="">Blog</a>
                         </li>
                     </ul>
                 </div>
